# nox

./: .gitignore  Cargo.toml
.github/workflows/: release-windows.yml
apps/desktop/: electron-builder.yml  package-lock.json  package.json  tsconfig.json
apps/desktop/src/main/: index.ts  sidecar.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: index.html
apps/desktop/src/renderer/src/: App.tsx  env.d.ts
apps/desktop/src/renderer/src/components/diff/: DiffView.tsx
apps/desktop/src/renderer/src/components/layout/: AppShell.tsx  BottomPanel.tsx  CenterPanel.tsx  Sidebar.tsx  ThreadList.tsx
apps/desktop/src/renderer/src/components/timeline/: PromptInput.tsx  Timeline.tsx
apps/desktop/src/renderer/src/components/worktrees/: WorktreeList.tsx
apps/desktop/src/renderer/src/features/diff/: useDiff.ts
apps/desktop/src/renderer/src/features/projects/: useOpenProject.ts
apps/desktop/src/renderer/src/features/runs/: useRuns.ts
apps/desktop/src/renderer/src/features/threads/: useThreads.ts
apps/desktop/src/renderer/src/features/worktrees/: useWorktrees.ts
apps/desktop/src/renderer/src/lib/: types.ts
apps/desktop/src/renderer/src/store/: layout.ts  project.ts  thread.ts
crates/event-bus/: Cargo.toml
crates/git-service/: Cargo.toml
crates/git-service/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/project-service/: Cargo.toml
crates/project-service/src/: lib.rs
crates/run-service/: Cargo.toml
crates/run-service/src/: lib.rs
crates/runtime-host/: Cargo.toml
crates/runtime-host/src/: dispatch.rs  main.rs  rpc.rs  terminal.rs
crates/storage/: Cargo.toml
crates/storage/src/: artifacts.rs  lib.rs  migrations.rs  projects.rs  runs.rs  terminal_sessions.rs  threads.rs  worktrees.rs
crates/terminal-service/: Cargo.toml
crates/terminal-service/src/: lib.rs
crates/thread-service/: Cargo.toml
crates/thread-service/src/: lib.rs
crates/worktree-service/: Cargo.toml
crates/worktree-service/src/: lib.rs
examples/: README.md  example-agent.sh
