[workspace]
resolver = "2"
members = ["crates/*"]

# Shared dependency versions for all workspace crates.
# Member crates opt in with `<dep>.workspace = true`.
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.37", features = ["bundled"] }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
