[package]
name = "run-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
models = { version = "0.1.0", path = "../models" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
storage = { version = "0.1.0", path = "../storage" }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
