[package]
name = "terminal-service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
models = { version = "0.1.0", path = "../models" }
portable-pty.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
